turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value white
		setCouleurBrosse(white)
                                 ^LangtonsAnt:8: error: not found: value black
		setCouleurBrosse(black)
                                 ^